# DimonRun

./: CMakeLists.txt  README.md  component_array.h  component_manager.cpp  component_manager.h  entity_manager.cpp  entity_manager.h  i_component_array.h  main.cpp  map_creator.cpp  map_creator.h  map_creator_main.cpp  mc_connector.h  resources.qrc  types_and_constants.h
.github/workflows/: ci.yml
core/: abstract_scene.h  animation_pack.cpp  animation_pack.h  components.h  connector.cpp  connector.h  constants.h  dungeon_name.h  events_constants.h  keyboard.cpp  keyboard.h  scene.cpp  scene.h  serializer.cpp  serializer.h
core/location_manager/: constants.h  location_manager.cpp  location_manager.h  settings_manager.cpp  settings_manager.h
dungeons/: default_hub.json  default_hub_example.json
engine/: component_array.h  component_manager.cpp  component_manager.h  coordinator.cpp  coordinator.h  entity_manager.cpp  entity_manager.h  system.cpp  system.h  system_manager.cpp  system_manager.h  types_and_constants.h
hand_created_dungeons/: hub.json  hub_mid.json  hub_mini.json
map_creator/: map_creator.cpp  map_creator.h  map_creator_main.cpp  mc_connector.cpp
resources/: background.qrc  hand_created_dungeons.qrc  hero.qrc  level0.json  list_of_textures.json  view.qrc
resources/animations/: back_wall_torch.json  coin.json  hero.json  rubbish.json  stone.json  water.json  wave.json
resources/hand_created_dungeons/: hub.json  level1.json  level2.json  level3.json  level8.json  secret_room1.json
systems/: animation_system.cpp  animation_system.h  collision_system.cpp  collision_system.h  illness_system.cpp  illness_system.h  joystick_system.cpp  joystick_system.h  movement_system.cpp  movement_system.h  painting_system.cpp  painting_system.h
view/buttons/: menu_button.cpp  menu_button.h
view/widgets/: fast_menu.cpp  fast_menu.h  message.cpp  message.h  scroll.cpp  scroll.h  vault.cpp  vault.h
